그린카 퍼블리싱 산출물 리스트 업데이트

--- a/src/status.html
+++ b/src/status.html
@@ -1645,8 +1645,8 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0101_M01.html">SCR_GA_CS_0101_M01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1659,8 +1659,8 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T01.html">SCR_GA_CS_0201_T01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1673,7 +1673,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T02.html">SCR_GA_CS_0201_T02.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1687,7 +1687,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T03.html">SCR_GA_CS_0201_T03.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1701,7 +1701,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T04.html">SCR_GA_CS_0201_T04.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1715,7 +1715,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0301_M01.html">SCR_GA_CS_0301_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1729,7 +1729,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0302_M01.html">SCR_GA_CS_0302_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1743,7 +1743,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0303_M01.html">SCR_GA_CS_0303_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1757,7 +1757,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0401_M01.html">SCR_GA_CS_0401_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1771,7 +1771,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0501_M01.html">SCR_GA_CS_0501_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1785,7 +1785,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0502_M01.html">SCR_GA_CS_0502_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1799,7 +1799,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0601_M01.html">SCR_GA_CS_0601_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1813,7 +1813,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01.html">SCR_GA_CS_0701_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1827,7 +1827,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0702_M01.html">SCR_GA_CS_0702_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1841,7 +1841,7 @@
                             <td></td>
                             <td></td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0703_M01.html">SCR_GA_CS_0703_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
