--- a/src/html/benefit/SCR_GA_BN_0307_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0307_M01.html
@@ -33,7 +33,7 @@
                                     </div>
                                 </div>
                                 <div class="section-cont">
-                                    <div class="coupon-list">
+                                    <div class="coupon-list type-2">
                                         <div class="coupon-item">
                                             <div class="discount-type">비율할인</div>
                                             <div class="discount-value">
