고객 센터 -- 작업 중

--- a/src/html/customer/SCR_GA_CS_0201_T01.html
+++ b/src/html/customer/SCR_GA_CS_0201_T01.html
@@ -21,6 +21,69 @@
                                 <li><a href="#">혜택</a></li>
                             </ul>
                         </div>
+                        <section class="mt32">
+                            <h3>매일 새로운 내차와 만나다!</h3>
+                            <div class="use-product-info">
+                                <ul>
+                                    <li class="item">
+                                        <div class="img"> <img src="/images/contents/img_use_product_info_01.svg" alt=""></div>
+                                        <div class="text">
+                                            <strong>회원가입</strong>
+                                            <p>웰컴 50% 쿠폰팩 등 혜택 즉시 지급 친구추천 시 너도나도 1만원</p>
+                                        </div>
+                                    </li>
+                                    <li class="item">
+                                        <div class="img"> <img src="/images/contents/img_use_product_info_01.svg" alt=""></div>
+                                        <div class="text">
+                                            <strong>예약</strong>
+                                            <p>내 위치에서 가까운 차량을 찾아 예약!
+                                                왕복 또는 편도! 자유로운 반납</p>
+                                        </div>
+                                    </li>
+                                    <li class="item">
+                                        <div class="img"> <img src="/images/contents/img_use_product_info_01.svg" alt=""></div>
+                                        <div class="text">
+                                            <strong>차량확인</strong>
+                                            <p>차량 탑승 전 꼼꼼하게 사전 체크!
+                                                파손부위를 전송하고, 안전하게 탑승</p>
+                                        </div>
+                                    </li>
+                                    <li class="item">
+                                        <div class="img"> <img src="/images/contents/img_use_product_info_01.svg" alt=""></div>
+                                        <div class="text">
+                                            <strong>주행</strong>
+                                            <p>APP의 스마트키 하나로 차량제어 가능
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li class="item">
+                                        <div class="img"> <img src="/images/contents/img_use_product_info_01.svg" alt=""></div>
+                                        <div class="text">
+                                            <strong>반납</strong>
+                                            <p>사용이 끝나고 반납 위치에 주차
+                                                반납신청하고 다음 이용자를 위해 댓글 작성
+                                                </p>
+                                        </div>
+                                    </li>
+                                    <li class="item">
+                                        <div class="img"> <img src="/images/contents/img_use_product_info_01.svg" alt=""></div>
+                                        <div class="text">
+                                            <strong>주행요금결제 완료
+                                            </strong>
+                                            <p>반납완료 후 사용한 주행요금 결제 확인
+                                                꼼꼼하게 경제적인 그린카 이용 완료!
+                                                </p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="tip-wrap mt24">
+                                <span class="badge green square lg">TIP</span>
+                                <p>그린카는 친구추천, 매너평가, 세차인증 등을 통해
+                                    다양한 혜택을 제공합니다. 
+                                    </p>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </section>
