--- a/src/status.html
+++ b/src/status.html
@@ -1643,7 +1643,7 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0101_M01.html">SCR_GA_CS_0101_M01.html</a></td>
                             <td class="stat">⚪</td>
@@ -1657,7 +1657,7 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T01.html">SCR_GA_CS_0201_T01.html</a></td>
                             <td class="stat">⚪</td>
@@ -1671,10 +1671,10 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T02.html">SCR_GA_CS_0201_T02.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1685,10 +1685,10 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T03.html">SCR_GA_CS_0201_T03.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1699,10 +1699,10 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0201_T04.html">SCR_GA_CS_0201_T04.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1713,10 +1713,10 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0301_M01.html">SCR_GA_CS_0301_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
