고객 센터 -- 작업 중

--- a/src/html/customer/SCR_GA_CS_0201_T01.html
+++ b/src/html/customer/SCR_GA_CS_0201_T01.html
@@ -23,7 +23,7 @@
                         </div>
                         <section class="mt32">
                             <h3>매일 새로운 내차와 만나다!</h3>
-                            <div class="use-product-info">
+                            <div class="info-list">
                                 <ul>
                                     <li class="item">
                                         <div class="img"> <img src="/images/contents/img_use_product_info_01.svg" alt=""></div>
