--- a/src/html/customer/SCR_GA_CS_0303_M01.html
+++ b/src/html/customer/SCR_GA_CS_0303_M01.html
@@ -12,19 +12,21 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="qna-view">
-                        <h3 class="title-md">휴대폰 기기/본인 인증이 안돼요<br />(본인 명의 휴대폰 없음, 인증 횟수 초과)</h3>
-                        <p>본인 명의 휴대폰 미소지로 휴대폰 기인/본인 인증이 불가능한 경우 그린카 서비스 이용이 불가능합니다.</p>
-                        <p>또한, 부정 사용 방지를 위해 월 본인인증 요청 횟수는 3회로 제한되어 있음을 알려드립니다.</p>
-                        <p>※ 법인 명의 휴대폰의 경우 '법인 휴대폰 개인 인증신청' 후 휴대폰 기기/본인 인증이 가능합니다.</p>
-                        <p>※ 신청 방법은 이용 중이신 통신사를 통해 확인 가능합니다.</p>
-                        <h3 class="title-md">[기기인증/본인인증 불가 사례]</h3>
-                        <ol>
-                            <li>① 타인 휴대기기를 사용하는 경우(가족/타인 명의)</li>
-                            <li>② 통신사 인증 App과 휴대폰 기기가 호환이 불가한 경우</li>
-                            <li>③ 법인 명의의 휴대폰인 경우 (단, 사용자별 통신사를 통해 법인 휴대폰 개인 인증 신청 시, 인증 가능)</li>
-                        </ol>
-                        <p>고객님의 소중한 개인정보 보호를 위한 정책인 점 양해 부탁드립니다.</p>
+                    <div class="information">
+                        <section>
+                            <h4>휴대폰 기기/본인 인증이 안돼요<br />(본인 명의 휴대폰 없음, 인증 횟수 초과)</h4>
+                            <p>본인 명의 휴대폰 미소지로 휴대폰 기인/본인 인증이 불가능한 경우 그린카 서비스 이용이 불가능합니다.</p>
+                            <p>또한, 부정 사용 방지를 위해 월 본인인증 요청 횟수는 3회로 제한되어 있음을 알려드립니다.</p>
+                            <p>※ 법인 명의 휴대폰의 경우 '법인 휴대폰 개인 인증신청' 후 휴대폰 기기/본인 인증이 가능합니다.</p>
+                            <p>※ 신청 방법은 이용 중이신 통신사를 통해 확인 가능합니다.</p>
+                            <h4>[기기인증/본인인증 불가 사례]</h4>
+                            <ol>
+                                <li>① 타인 휴대기기를 사용하는 경우(가족/타인 명의)</li>
+                                <li>② 통신사 인증 App과 휴대폰 기기가 호환이 불가한 경우</li>
+                                <li>③ 법인 명의의 휴대폰인 경우 (단, 사용자별 통신사를 통해 법인 휴대폰 개인 인증 신청 시, 인증 가능)</li>
+                            </ol>
+                            <p class="mt8">고객님의 소중한 개인정보 보호를 위한 정책인 점 양해 부탁드립니다.</p>
+                        </section>
                     </div>
                 </div>
             </section>
