--- a/src/html/customer/SCR_GA_CS_0401_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0401_M01_01.html
@@ -6,7 +6,7 @@
     <body>
         <div id="wrap">
             <!-- header -->
-            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "가입/탈퇴" })
+            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "가입조회" })
             <!-- //header -->
 
             <!-- container -->
@@ -14,7 +14,7 @@
                 <div class="contents">
                     <div class="information">
                         <div class="join-withdraw">
-                            <h3 class="intro-text">자동차운전면허 번호를 통해<br /><em>그린카 가입여부를 조회해보세요</em></h3>
+                            <h3 class="intro-text"><span>자동차운전면허 번호를 통해</span><br />그린카 가입여부를 조회해보세요</h3>
                             <div class="gc-tab-type02">
                                 <ul>
                                     <li><a href="#">카메라</a></li>
