--- a/src/status.html
+++ b/src/status.html
@@ -1752,13 +1752,27 @@
                         <tr>
                             <td></td>
                             <td>가입조회</td>
+                            <td>(번호입력)</td>
                             <td></td>
                             <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0401_M01.html">SCR_GA_CS_0401_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>(지역입력)</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0401_M01_01.html">SCR_GA_CS_0401_M01_01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1769,10 +1783,10 @@
                             <td>소개</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0501_M01.html">SCR_GA_CS_0501_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
