--- a/src/html/benefit/SCR_GA_BN_0302_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0302_M01.html
@@ -21,7 +21,7 @@
                             
 							<div class="certi-form">
 								<div class="ip-wrap">
-									<div class="ip-group">
+									<div class="ip-group certy">
 										<div class="row">
 											<label for="ip01" class="ip-label">롯데 이메일 계정 인증</label>
 											<input id="ip01" type="email" class="ip-txt" placeholder="롯데 이메일 계정 입력">
@@ -37,17 +37,22 @@
 										<button type="button" class="btn lg">인증코드 요청</button>
 										<!-- <button type="button" class="btn line lg">인증코드 재발송</button> -->
 									</div>
-	
-									<div class="ip-group box">
+									
+									<!-- 20220823 -->
+									<div class="ip-group">
 										<div class="row">
 											<input type="number" class="ip-txt">
 											<div class="line"></div>
 											<span class="icon-group">
-													3:00
+												<button type="button" class="btn-del">
+													<i class="ico delete lg"></i>
+												</button>
+												<span class="time">3:00</span>
 											</span>
 										</div>
 										<p class="error-txt">인증코드가 일치하지 않습니다</p>
 									</div>
+									<!-- //20220823 -->
 								</div>
 							</div>
 
