공통 셀렉트 추가

--- a/src/html/status/SCR_GA_AR_0202_T02.html
+++ b/src/html/status/SCR_GA_AR_0202_T02.html
@@ -107,10 +107,12 @@
 									</label>
 								</div>
 								<div class="flex">
-									<select name="" id="">
-										<option>은행 선택</option>
-										<option>국민카드</option>
-									</select>
+									<div class="gc-select">
+										<select name="" id="">
+											<option>은행 선택</option>
+											<option>국민카드</option>
+										</select>
+									</div>
 								</div>
 							</div>
 							<div class="block grid-flex">
