--- a/src/html/status/SCR_GA_AR_0202_T02.html
+++ b/src/html/status/SCR_GA_AR_0202_T02.html
@@ -115,14 +115,30 @@
 									</div>
 								</div>
 							</div>
-							<div class="block grid-flex">
-								<div class="flex">
+							<div class="block">
+								<div>
 									<label for="tmpRadio03" class="gc-radio">
 										<input type="radio" name="tmpRadio01" id="tmpRadio03">
 										<span>다른 카드 결제</span>
 									</label>
 								</div>
 							</div>
+						</div>
+
+						<!-- 법인 -->
+						<div class="payment corp">
+							<div class="grid-flex">
+								<div class="flex">
+									<h3 class="title-sm">결제수단</h3>
+								</div>
+								<div class="flex">
+									법인[전용]
+								</div>
+							</div>
+							<p class="desc-cp">
+								법인 관리자가 등록한 카드입니다.<br>
+								카드 수정 및 삭제가 불가능합니다.
+							</p>
 						</div>
 
 						<div class="agree-group">
@@ -186,7 +202,7 @@
 
 					</div>
 
-					@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"사고사진 등록하기", disabled:"disabled"})
+					@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"총 386,100원 결제하기", disabled:"disabled"})
                 </div>
             </section>
             <!-- //container -->
