--- a/src/status.html
+++ b/src/status.html
@@ -2007,11 +2007,11 @@
 							<td></td>
 							<td></td>
 							<td>/status</td>
-							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P02.html">SCR_GA_AR_0202_P02.html</a></td>
+							<td><a target="_blank" class="througt" href="html/status/SCR_GA_AR_0202_P02.html">SCR_GA_AR_0202_P02.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
-							<td></td>
+							<td>시스템</td>
 						</tr>
 						<tr>
 							<td></td>
@@ -2021,11 +2021,11 @@
 							<td></td>
 							<td></td>
 							<td>/status</td>
-							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P03.html">SCR_GA_AR_0202_P03.html</a></td>
+							<td><a target="_blank" class="througt" href="html/status/SCR_GA_AR_0202_P03.html">SCR_GA_AR_0202_P03.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
-							<td></td>
+							<td>시스템</td>
 						</tr>
 						<tr>
 							<td></td>
@@ -2033,10 +2033,10 @@
 							<td></td>
 							<td>사고사진 촬영 가이드</td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P04.html">SCR_GA_AR_0202_P04.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
