--- a/src/html/status/SCR_GA_AR_0202_T02.html
+++ b/src/html/status/SCR_GA_AR_0202_T02.html
@@ -125,6 +125,63 @@
 							</div>
 						</div>
 
+						<div class="payment">
+							<div class="title-area grid-flex">
+								<div class="flex">
+									<h3 class="title-sm">결제수단</h3>
+								</div>
+								<div class="flex">
+									<button type="button" class="btn-link">
+										<span class="under">
+											결제수단 변경
+										</span>
+									</button>
+								</div>
+							</div>
+
+							<div class="block grid-flex">
+								<div class="flex">
+									은행명
+								</div>
+								<div class="flex">
+									우리은행
+								</div>
+							</div>
+							<div class="block grid-flex">
+								<div class="flex">
+									계좌번호
+								</div>
+								<div class="flex">
+									1005-003-144757 <button class="btn-copy"></button>
+								</div>
+							</div><div class="block grid-flex">
+								<div class="flex">
+									예금주
+								</div>
+								<div class="flex">
+									㈜그린카
+								</div>
+							</div><div class="block grid-flex">
+								<div class="flex">
+									입금액
+								</div>
+								<div class="flex">
+									<span class="value">386,100</span> 원
+								</div>
+							</div><div class="block grid-flex">
+								<div class="flex">
+									납부기한
+								</div>
+								<div class="flex">
+									2022.06.23
+								</div>
+							</div>
+							<div class="btn-group">
+								<button type="button" class="btn cancel lg">납부확인증</button>
+							</div>
+						</div>
+
+
 						<!-- 법인 -->
 						<div class="payment corp">
 							<div class="grid-flex">
