--- a/src/status.html
+++ b/src/status.html
@@ -1983,7 +1983,7 @@
 							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
-							<td></td>
+							<td>삭제</td>
 						</tr>
 						<tr>
 							<td></td>
@@ -1991,10 +1991,10 @@
 							<td></td>
 							<td>사고사진 등록</td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P01.html">SCR_GA_AR_0202_P01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2047,10 +2047,10 @@
 							<td></td>
 							<td>고객부담금 안내서</td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/status</td>
-							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P05.html">SCR_GA_AR_0202_P05.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0202_P05#full">SCR_GA_AR_0202_P05.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2061,10 +2061,10 @@
 							<td></td>
 							<td>보험수리비 청구서</td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/status</td>
-							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P06.html">SCR_GA_AR_0202_P06.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0202_P06#full">SCR_GA_AR_0202_P06.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2075,10 +2075,10 @@
 							<td></td>
 							<td>납부확인증</td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/status</td>
-							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P07.html">SCR_GA_AR_0202_P07.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0202_P07#full">SCR_GA_AR_0202_P07.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
