고객센터 -- 작업 중

--- a/src/html/customer/SCR_GA_CS_0101_M01.html
+++ b/src/html/customer/SCR_GA_CS_0101_M01.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="information">
+                    <div class="customer">
                         <h3 class="intro-text">
                             무엇을 도와드릴까요?<br />
                             도움을 드리겠습니다.
