--- a/src/html/customer/SCR_GA_CS_0201_T01.html
+++ b/src/html/customer/SCR_GA_CS_0201_T01.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="information">
+                    <div class="customer">
                         <div class="gc-tab">
                             <ul>
                                 <li><a href="#" class="active">이용</a></li>
