--- a/src/html/customer/SCR_GA_CS_0201_T02_01.html
+++ b/src/html/customer/SCR_GA_CS_0201_T02_01.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="information">
+                    <div class="customer">
                         <div class="gc-tab">
                             <ul>
                                 <li><a href="#"">이용</a></li>
@@ -27,8 +27,8 @@
                             </div>
                             <div class="section-body">
                                 <div class="guide-box align-left">
-                                    그린카는 상시 이벤트(차종 및 지역)을 진행하여 표준 
-                                    대여요금 보다 더욱 저렴하게 이용가능합니다.
+                                    <p>그린카는 상시 이벤트(차종 및 지역)을 진행하여 표준 
+                                    대여요금 보다 더욱 저렴하게 이용가능합니다.</p>
                                 </div>
                                 <section>
                                     <div class="gc-tab-type02 mt24">
