--- a/src/html/customer/SCR_GA_CS_0201_T03.html
+++ b/src/html/customer/SCR_GA_CS_0201_T03.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="information">
+                    <div class="customer">
                         <div class="gc-tab">
                             <ul>
                                 <li><a href="#"">이용</a></li>
@@ -21,10 +21,10 @@
                                 <li><a href="#">혜택</a></li>
                             </ul>
                         </div>
-                        <section>
+                        <section class="mt32">
                           <h3>요금안내</h3>
                           <div class="guide-box align-left">
-                              그린카의 전 차량은 사고 발생 시, 자동차 종합보험에 의거하여 보상해드립니다.
+                              <p>그린카의 전 차량은 사고 발생 시, 자동차 종합보험에 의거하여 보상해드립니다.</p>
                           </div>
                           <section>
                               <div class="tb-wrap type-2 mt24">
