--- a/src/html/customer/SCR_GA_CS_0201_T04.html
+++ b/src/html/customer/SCR_GA_CS_0201_T04.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="information">
+                    <div class="customer">
                         <div class="gc-tab">
                             <ul>
                                 <li><a href="#">이용</a></li>
@@ -23,7 +23,7 @@
                         </div>
                         <section class="mt32">
                             <h3>회원혜택</h3>
-                            <div class="guide-box align-left">그린카 회원만의 다양한 회원 혜택 할인과 적립, 이용 쿠폰팩을 드립니다.</div>
+                            <div class="guide-box align-left"><p>그린카 회원만의 다양한 회원 혜택 할인과 적립, 이용 쿠폰팩을 드립니다.</p></div>
                             <div class="info-list">
                                 <ul>
                                     <li class="item">
