--- a/src/html/customer/SCR_GA_CS_0303_M01.html
+++ b/src/html/customer/SCR_GA_CS_0303_M01.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="information">
+                    <div class="customer">
                         <section>
                             <h4>휴대폰 기기/본인 인증이 안돼요<br />(본인 명의 휴대폰 없음, 인증 횟수 초과)</h4>
                             <p>본인 명의 휴대폰 미소지로 휴대폰 기인/본인 인증이 불가능한 경우 그린카 서비스 이용이 불가능합니다.</p>
