--- a/src/html/customer/SCR_GA_CS_0401_M01.html
+++ b/src/html/customer/SCR_GA_CS_0401_M01.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="information">
+                    <div class="customer">
                         <div class="join-withdraw">
                             <h3 class="intro-text"><span>자동차운전면허 번호를 통해</span><br />그린카 가입여부를 조회해보세요</h3>
                             <div class="gc-tab-type02">
