--- a/src/html/customer/SCR_GA_CS_0401_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0401_M01_01.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="information">
+                    <div class="customer">
                         <div class="join-withdraw">
                             <h3 class="intro-text"><span>자동차운전면허 번호를 통해</span><br />그린카 가입여부를 조회해보세요</h3>
                             <div class="gc-tab-type02">
@@ -27,13 +27,13 @@
                                 <textarea name="" id="" cols="30" rows="10" placeholder="예시"></textarea>
                             </div>
                             <div class="ip-group">
-                                <div class="select">
-                                    <select name="" id="">
-                                        <option value="1">지역선택</option>
-                                        <option value="2">서울</option>
-                                    </select>
-                                </div>
-                                <div class="row">
+                                <div class="row flex">
+                                    <div class="gc-select">
+                                        <select name="" id="">
+                                            <option>지역선택</option>
+                                            <option>서울</option>
+                                        </select>
+                                    </div>
                                     <input id="ip01" type="text" class="ip-txt" placeholder="" />
                                     <!-- <button type="button" class="icon-group btn-del">
                                 <i class="ico delete md"></i>
