--- a/src/html/customer/SCR_GA_CS_0501_M01.html
+++ b/src/html/customer/SCR_GA_CS_0501_M01.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="information">
+                    <div class="customer">
                         <section>
                             <h4>법인/단체 카셰어링 소개</h4>
                             <p>
