--- a/src/html/customer/SCR_GA_CS_0301_M01.html
+++ b/src/html/customer/SCR_GA_CS_0301_M01.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="information">
+                    <div class="customer">
                         <div class="frequently-qna">
                             <h3 class="intro-text">
                                 무엇을 도와드릴까요?<br />
