--- a/src/html/mypage/SCR_GA_CI_0903_M01_02.html
+++ b/src/html/mypage/SCR_GA_CI_0903_M01_02.html
@@ -13,7 +13,7 @@
             <section id="container">
                 <div class="contents">
                     <div class="invited-friends">
-                        <div class="guide-box">친구 초대 쿠폰은 친구의 가입상태가 정회원(면허/결제정보 등록)<br />일 때 친구와 나에게 발급됩니다.</div>
+                        <div class="guide-box"><p>친구 초대 쿠폰은 친구의 가입상태가 정회원(면허/결제정보 등록)<br />일 때 친구와 나에게 발급됩니다.</p></div>
                         <div class="friend-list-wrap">
                             <div class="no-data">
                                 <p class="desc">표시할 내용이 없습니다</p>
