사고접수현황

--- a/src/html/status/SCR_GA_AR_0101_P01.html
+++ b/src/html/status/SCR_GA_AR_0101_P01.html
@@ -65,18 +65,18 @@
 			</div>
 
 			<div class="txt-module">
-				<p class="title-sm">
+				<h3 class="title-sm">
 					손해면책 예외적용
-				</p>
+				</h3>
 				<p class="desc">
 					사고발생 미신고·허위신고·고의적 파손인 경우 손해면책에서 제외되며, 실수리비 전액 배상과 고발 및 이용불가 조치가 이루어집니다.
 				</p>
 			</div>
 
 			<div class="txt-module">
-				<p class="title-sm">
+				<h3 class="title-sm">
 					휴차보상
-				</p>
+				</h3>
 				<p class="desc">
 					차량 수리기간 동안의 영업손실에 대해 기준 대여요금의 50%를 휴차보상료로 별도 청구하며, 수리기간 또는 재구매 및 등록에 소요되는 기간에 따라 최대 30일분까지 부과 가능합니다.
 				</p>
